--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@
 
 .calculator .formdiv input:active{
 
-    border-radius: 50%;
+    border-radius: 50px;
 background: linear-gradient(145deg, #cacaca, #f0f0f0);
 box-shadow:  8px 8px 8px #acacac,
              -8px -8px 8px #ffffff;
@@ -175,7 +175,7 @@ box-shadow:  35px 35px 70px #363636,
 
 .darkcalculator .darkformdiv input:active{
 
-    border-radius: 50%;
+    border-radius: 50px;
 background: linear-gradient(145deg, #3a3a3a, #444444);
 box-shadow:  8px 8px 8px #313131,
              -8px -8px 8px #4f4f4f;
